--- a/Core.Wpf/Themes/Generic.xaml
+++ b/Core.Wpf/Themes/Generic.xaml
@@ -108,7 +108,83 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
     <!--ListBoxItem-->
-    <Style TargetType="ListBoxItem">
+    <ControlTemplate TargetType="{x:Type ListBoxItem}"
+                     x:Key="DarkListBoxItemTemplate">
+        <Grid Background="{TemplateBinding Background}">
+            <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="MouseOver">
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="fillColor"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         Duration="0"
+                                                         To=".35" />
+                        </Storyboard>
+                    </VisualState>
+                    <VisualState x:Name="Disabled">
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="contentPresenter"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         Duration="0"
+                                                         To=".55" />
+                        </Storyboard>
+                    </VisualState>
+                </VisualStateGroup>
+                <VisualStateGroup x:Name="SelectionStates">
+                    <VisualState x:Name="Unselected" />
+                    <VisualState x:Name="Selected">
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="fillColor2"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         Duration="0"
+                                                         To=".75" />
+                        </Storyboard>
+                    </VisualState>
+                </VisualStateGroup>
+                <VisualStateGroup x:Name="FocusStates">
+                    <VisualState x:Name="Focused">
+                        <Storyboard>
+                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="FocusVisualElement"
+                                                                       Storyboard.TargetProperty="Visibility"
+                                                                       Duration="0">
+                                <DiscreteObjectKeyFrame KeyTime="0">
+                                    <DiscreteObjectKeyFrame.Value>
+                                        <Visibility>Visible</Visibility>
+                                    </DiscreteObjectKeyFrame.Value>
+                                </DiscreteObjectKeyFrame>
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualState>
+                    <VisualState x:Name="Unfocused" />
+                </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+            <Rectangle x:Name="fillColor"
+                                   Opacity="0"
+                                   Fill="{x:Static SystemColors.ControlBrush}"
+                                   IsHitTestVisible="False"
+                                   RadiusX="1"
+                                   RadiusY="1" />
+            <Rectangle x:Name="fillColor2"
+                                   Opacity="0"
+                                   Fill="LightSteelBlue"
+                                   IsHitTestVisible="False"
+                                   RadiusX="1"
+                                   RadiusY="1" />
+            <ContentPresenter x:Name="contentPresenter"
+                                          Content="{TemplateBinding Content}"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          Margin="{TemplateBinding Padding}" />
+            <Rectangle x:Name="FocusVisualElement"
+                                   Stroke="#FF6DBDD1"
+                                   StrokeThickness="1"
+                                   Visibility="Collapsed"
+                                   RadiusX="1"
+                                   RadiusY="1" />
+        </Grid>
+    </ControlTemplate>
+    <Style TargetType="{x:Type ListBoxItem}">
         <Setter Property="Padding"
                 Value="3" />
         <Setter Property="HorizontalContentAlignment"
@@ -121,85 +197,8 @@
                 Value="1" />
         <Setter Property="FocusVisualStyle"
                 Value="{x:Null}" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="ListBoxItem">
-                    <Grid Background="{TemplateBinding Background}">
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="CommonStates">
-                                <VisualState x:Name="Normal" />
-                                <VisualState x:Name="MouseOver">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="fillColor"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         Duration="0"
-                                                         To=".35" />
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Disabled">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="contentPresenter"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         Duration="0"
-                                                         To=".55" />
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                            <VisualStateGroup x:Name="SelectionStates">
-                                <VisualState x:Name="Unselected" />
-                                <VisualState x:Name="Selected">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="fillColor2"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         Duration="0"
-                                                         To=".75" />
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                            <VisualStateGroup x:Name="FocusStates">
-                                <VisualState x:Name="Focused">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="FocusVisualElement"
-                                                                       Storyboard.TargetProperty="Visibility"
-                                                                       Duration="0">
-                                            <DiscreteObjectKeyFrame KeyTime="0">
-                                                <DiscreteObjectKeyFrame.Value>
-                                                    <Visibility>Visible</Visibility>
-                                                </DiscreteObjectKeyFrame.Value>
-                                            </DiscreteObjectKeyFrame>
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Unfocused" />
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-                        <Rectangle x:Name="fillColor"
-                                   Opacity="0"
-                                   Fill="{x:Static SystemColors.ControlBrush}"
-                                   IsHitTestVisible="False"
-                                   RadiusX="1"
-                                   RadiusY="1" />
-                        <Rectangle x:Name="fillColor2"
-                                   Opacity="0"
-                                   Fill="{x:Static SystemColors.HighlightBrush}"
-                                   IsHitTestVisible="False"
-                                   RadiusX="1"
-                                   RadiusY="1" />
-                        <ContentPresenter x:Name="contentPresenter"
-                                          Content="{TemplateBinding Content}"
-                                          ContentTemplate="{TemplateBinding ContentTemplate}"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          Margin="{TemplateBinding Padding}" />
-                        <Rectangle x:Name="FocusVisualElement"
-                                   Stroke="#FF6DBDD1"
-                                   StrokeThickness="1"
-                                   Visibility="Collapsed"
-                                   RadiusX="1"
-                                   RadiusY="1" />
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Template"
+                Value="{StaticResource DarkListBoxItemTemplate}" />
     </Style>
     <!--Data templates-->
     <!--Busy Mediator-->
@@ -426,7 +425,7 @@
                                             Duration="0:0:1.5"
                                             AutoReverse="True">
                                 <ColorAnimation.EasingFunction>
-                                    <ElasticEase EasingMode="EaseInOut" />
+                                    <ElasticEase EasingMode="EaseIn" />
                                 </ColorAnimation.EasingFunction>
                             </ColorAnimation>
                         </Storyboard>
